cs-apps/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cs-audiobookshelf
  name: cs-audiobookshelf
spec:
  ports:
    - name: "13378"
      port: 13378
      targetPort: 80
  selector:
    app: cs-audiobookshelf
